chore: add votes swagger docs
